JSON array from DB now being correctly rendered with values specified.

--- a/public/js/app/players/players.html
+++ b/public/js/app/players/players.html
@@ -2,7 +2,7 @@
   <strong ng-show="!players">Loading...</strong>
   <ul>
     <li ng-repeat="(key,value) in players">
-       {{key}} : {{value}}
+       Session_Date : {{value.Session_Date}}
     </li>
   </ul>
 </div>
