--- a/public/js/app/players/players.html
+++ b/public/js/app/players/players.html
@@ -1,11 +1,9 @@
 <div ng-controller="PlayersController" style="text-align:center">
 <div class="widget">
   <strong ng-show="!players">Loading...</strong>
-  <ul>
-    <li class="dates" ng-repeat="(key,value) in players">
-       Session_Date : {{value.Session_Date}}
-    </li>
-  </ul>
+  <p>
+    Hi {{players.Player_First_Name}}
+  </p>
 </div>
 <a href="#/chart"><button>Chart</button></a> 
 </div>
