Measures now rendering to page. Still need to configure angular to reduce loading times.

--- a/public/js/app/players/hsr.html
+++ b/public/js/app/players/hsr.html
@@ -6,7 +6,11 @@
        {{player.Session_Date}}
     </li>
   </ul>-->
-  <button ng-click="logText()">Log</button>
+  <a href="#/hml"><button>HML Distance</button></a>
+<a href="#/accelerations"><button>Accelerations</button></a> 
+<a href="#/decelerations"><button>Decelerations</button></a> 
+<a href="#/distanceTotal"><button>Distance Total</button></a> 
+
 <script>
 
 
