--- a/public/js/app/players/players.html
+++ b/public/js/app/players/players.html
@@ -5,7 +5,11 @@
     Hi {{players.Player_First_Name}}
   </p>
 </div>
-<a href="#/chart"><button>Chart</button></a> 
+<a href="#/hml"><button>HML Distance</button></a>
+<a href="#/accelerations"><button>Accelerations</button></a> 
+<a href="#/decelerations"><button>Decelerations</button></a> 
+<a href="#/distanceTotal"><button>Distance Total</button></a> 
+<a href="#/highSpeedRunning"><button>High speed running</button></a> 
 </div>
 <!--
 
