Angular controllers code refactored.

--- a/public/js/app/players/hml.html
+++ b/public/js/app/players/hml.html
@@ -10,3 +10,5 @@
 <a href="#/decelerations"><button>Decelerations</button></a> 
 <a href="#/distanceTotal"><button>Distance Total</button></a> 
 <a href="#/highSpeedRunning"><button>High speed running</button></a> 
+
+<!--<button ng-click="changeChart()">Test</button>--->
