--- a/public/js/app/pages/dist.html
+++ b/public/js/app/pages/dist.html
@@ -1,3 +1,4 @@
+<a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a>
 <div id="container" style="width:100%; height:400px;">
     <highchart id="chart1" config="chartConfig"></highchart>
 </div>
@@ -6,7 +7,9 @@
        {{player.Session_Date}}
     </li>
   </ul>-->
-<a href="#/hml"><button>HML Distance</button></a>
-<a href="#/accelerations"><button>Accelerations</button></a> 
-<a href="#/decelerations"><button>Decelerations</button></a> 
-<a href="#/highSpeedRunning"><button>High speed running</button></a> 
+  <div style="text-align:center;">
+<a href="#/hml"><button class="btn btn-lg btn-primary">HML Distance</button></a>
+<a href="#/accelerations"><button class="btn btn-lg btn-primary">Accelerations</button></a> 
+<a href="#/decelerations"><button class="btn btn-lg btn-primary">Decelerations</button></a> 
+<a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary">High speed running</button></a> 
+</div>
