--- a/public/js/app/pages/playerSelected.html
+++ b/public/js/app/pages/playerSelected.html
@@ -1,11 +1,15 @@
-<a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a> 
-<div id="container" style="width:100%; height:400px;">
-    <highchart id="chart1" config="chartConfig"></highchart>
-</div>
-
- <div style="text-align:center;">
+<div ng-controller="PlayersController" style="text-align:center">
+  <strong ng-show="!Ids">Loading...</strong>
+  
+</br>
+<p>
+    Select a measure to view!
+</p>
+<div id="measuresButtons">
+<a href="#/hml"><button class="btn btn-lg btn-primary ">HML Distance</button></a>
 <a href="#/accelerations"><button class="btn btn-lg btn-primary ">Accelerations</button></a> 
 <a href="#/decelerations"><button class="btn btn-lg btn-primary ">Decelerations</button></a> 
 <a href="#/distanceTotal"><button class="btn btn-lg btn-primary ">Distance Total</button></a> 
 <a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary ">High speed running</button></a> 
+</div>
 </div>
