Fixes made: y-axis min set and validation alerts.

--- a/public/js/app/pages/playerSelected.html
+++ b/public/js/app/pages/playerSelected.html
@@ -1,6 +1,5 @@
-<div ng-controller="PlayersController" style="text-align:center">
-  <strong ng-show="!Ids">Loading...</strong>
-  
+
+  <h1>{{name}}</h1>
 </br>
 <p>
     Select a measure to view!
@@ -11,5 +10,4 @@
 <a href="#/decelerations"><button class="btn btn-lg btn-primary ">Decelerations</button></a> 
 <a href="#/distanceTotal"><button class="btn btn-lg btn-primary ">Distance Total</button></a> 
 <a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary ">High speed running</button></a> 
-</div>
 </div>
