--- a/public/js/app/pages/players.html
+++ b/public/js/app/pages/players.html
@@ -1,4 +1,5 @@
-<div ng-controller="PlayersController" style="text-align:center">
+<div style="text-align:center">
+  
   <strong ng-show="!Ids">Loading...</strong>
 
       
@@ -23,7 +24,7 @@
   </div>
 </div>
 <script>
- /*    jQuery('button').click(function(){
+     jQuery('#measuresButtons').click(function(){
           alert("Please select a player to view statistics!");
-        });*/
+        });
 </script>
