--- a/public/js/app/pages/acc.html
+++ b/public/js/app/pages/acc.html
@@ -1,12 +1,8 @@
+<h1>{{name}}</h1>
 <a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a>
 <div id="container" style="width:100%; height:400px;">
     <highchart id="chart1" config="chartConfig"></highchart>
 </div>
-<!--<ul>
-    <li id="dates" class="dates" ng-repeat="player in players">
-       {{player.Session_Date}}
-    </li>
-  </ul>-->
   <div style="text-align:center;">
 <a href="#/hml"><button class="btn btn-lg btn-primary">HML Distance</button></a>
 <a href="#/decelerations"><button class="btn btn-lg btn-primary">Decelerations</button></a> 
