--- a/public/js/app/pages/hml.html
+++ b/public/js/app/pages/hml.html
@@ -1,8 +1,8 @@
+<h1>{{name}}</h1>
 <a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a> 
 <div id="container" style="width:100%; height:400px;">
     <highchart id="chart1" config="chartConfig"></highchart>
 </div>
-
  <div style="text-align:center;">
 <a href="#/accelerations"><button class="btn btn-lg btn-primary ">Accelerations</button></a> 
 <a href="#/decelerations"><button class="btn btn-lg btn-primary ">Decelerations</button></a> 
