Dynamic stress load, fatigue index and speed intensity added as measures.

--- a/public/js/app/pages/hml.html
+++ b/public/js/app/pages/hml.html
@@ -8,4 +8,8 @@
 <a href="#/decelerations"><button class="btn btn-lg btn-primary ">Decelerations</button></a> 
 <a href="#/distanceTotal"><button class="btn btn-lg btn-primary ">Distance Total</button></a> 
 <a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary ">High speed running</button></a> 
+
+<a href="#/dsl"><button class="btn btn-lg btn-primary">Dynamic Stress Load</button></a>
+<a href="#/fatigue"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
+<a href="#/spIntensity"><button class="btn btn-lg btn-primary">Speed Intensity</button></a> 
 </div>
