--- a/public/js/app/pages/players.html
+++ b/public/js/app/pages/players.html
@@ -16,11 +16,14 @@
       
   </br>
   <div id="measuresButtons">
-    <button id="inactive" class="btn btn-lg btn-danger ">HML Distance</button>
-    <button id="inactive" class="btn btn-lg btn-danger ">Accelerations</button>
-    <button id="inactive" class="btn btn-lg btn-danger ">Decelerations</button>
-    <button id="inactive" class="btn btn-lg btn-danger ">Distance Total</button>
-    <button id="inactive" class="btn btn-lg btn-danger ">High speed running</button>
+    <button  class="btn btn-lg btn-danger ">HML Distance</button>
+    <button  class="btn btn-lg btn-danger ">Accelerations</button>
+    <button  class="btn btn-lg btn-danger ">Decelerations</button>
+    <button  class="btn btn-lg btn-danger ">Distance Total</button>
+    <button  class="btn btn-lg btn-danger ">High speed running</button>
+    <button class="btn btn-lg btn-primary">Dynamic Stress Load</button>
+    <button class="btn btn-lg btn-primary">Fatigue Index</button>
+    <button class="btn btn-lg btn-primary">Speed Intensity</button>
   </div>
 </div>
 <script>
