--- a/public/js/app/pages/fatigue.html
+++ b/public/js/app/pages/fatigue.html
@@ -4,12 +4,12 @@
     <highchart id="chart1" config="chartConfig"></highchart>
 </div>
   <div style="text-align:center;">
-<a href="#/hml"><button class="btn btn-lg btn-primary">HML Distance</button></a>
+  <a href="#/hml"><button class="btn btn-lg btn-primary">HML Distance</button></a>
 <a href="#/accelerations"><button class="btn btn-lg btn-primary">Accelerations</button></a> 
 <a href="#/decelerations"><button class="btn btn-lg btn-primary">Decelerations</button></a> 
-<a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary">High speed running</button></a> 
-
+<a href="#/distanceTotal"><button class="btn btn-lg btn-primary">Distance Total</button></a> 
+<a href="#/hsr"><button class="btn btn-lg btn-primary">High Speed Running</button></a>
 <a href="#/dsl"><button class="btn btn-lg btn-primary">Dynamic Stress Load</button></a>
-<a href="#/fatigue"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
-<a href="#/spIntensity"><button class="btn btn-lg btn-primary">Speed Intensity</button></a> 
+<a href="#/spIntensity"><button class="btn btn-lg btn-primary">Speed Intensity</button></a>
+
 </div>
