--- a/public/js/app/pages/playerSelected.html
+++ b/public/js/app/pages/playerSelected.html
@@ -1,16 +1,8 @@
-
-  <h1>{{name}}</h1>
+<h1>{{name}}</h1>
 </br>
 <p>
     Select a measure to view!
 </p>
 <div id="measuresButtons">
-<a href="#/hml"><button class="btn btn-lg btn-primary ">HML Distance</button></a>
-<a href="#/accelerations"><button class="btn btn-lg btn-primary ">Accelerations</button></a> 
-<a href="#/decelerations"><button class="btn btn-lg btn-primary ">Decelerations</button></a> 
-<a href="#/distanceTotal"><button class="btn btn-lg btn-primary ">Distance Total</button></a> 
-<a href="#/highSpeedRunning"><button class="btn btn-lg btn-primary ">High speed running</button></a>
-<a href="#/dsl"><button class="btn btn-lg btn-primary">Dynamic Stress Load</button></a>
-<a href="#/fatigue"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
-<a href="#/spIntensity"><button class="btn btn-lg btn-primary">Speed Intensity</button></a> 
+<a ng-repeat='button in indices' href="#/view/{{button.viewId}}"><button class="btn btn-lg btn-primary">{{button.buttonText}} Test</button></a> 
 </div>
