--- a/public/js/app/pages/players.html
+++ b/public/js/app/pages/players.html
@@ -12,8 +12,6 @@
       </ul>
       </div>
     </div>
-      
-      
   </br>
   <div id="measuresButtons">
     <button  class="btn btn-lg btn-danger ">HML Distance</button>
@@ -21,9 +19,9 @@
     <button  class="btn btn-lg btn-danger ">Decelerations</button>
     <button  class="btn btn-lg btn-danger ">Distance Total</button>
     <button  class="btn btn-lg btn-danger ">High speed running</button>
-    <button class="btn btn-lg btn-primary">Dynamic Stress Load</button>
-    <button class="btn btn-lg btn-primary">Fatigue Index</button>
-    <button class="btn btn-lg btn-primary">Speed Intensity</button>
+    <button class="btn btn-lg btn-danger">Dynamic Stress Load</button>
+    <button class="btn btn-lg btn-danger">Fatigue Index</button>
+    <button class="btn btn-lg btn-danger">Speed Intensity</button>
   </div>
 </div>
 <script>
