--- a/public/js/app/pages/playerSelected.html
+++ b/public/js/app/pages/playerSelected.html
@@ -1,4 +1,5 @@
 <h1>{{name}}</h1>
+<a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a>
 </br>
 <p>
     Select a measure to view!
