Highcharts res fixed by not displaying x-axis values. Injury off by default. Test files included.

--- a/public/js/app/pages/chart.html
+++ b/public/js/app/pages/chart.html
@@ -14,3 +14,5 @@
 <a ng-hide="currentView.dslHidden" href="#/view/6"><button class="btn btn-lg btn-primary">Dynamic Stress Load</button></a>
 <a ng-hide="currentView.fatigueHidden" href="#/view/7"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
 </div>
+
+<button ng-click="toggleInj()" class="btn btn-lg btn-primary">Toggle Injury</button>
