Problematic require statemnt in server.js removed.

--- a/public/js/app/pages/playerSelected.html
+++ b/public/js/app/pages/playerSelected.html
@@ -5,5 +5,5 @@
     Select a measure to view!
 </p>
 <div id="measuresButtons">
-<a ng-repeat='button in indices' href="#/view/{{button.viewId}}"><button class="btn btn-lg btn-primary">{{button.buttonText}} Test</button></a> 
+<a ng-repeat='button in indices' href="#/view/{{button.viewId}}"><button class="btn btn-lg btn-primary">{{button.buttonText}}</button></a> 
 </div>
