--- a/public/js/app/pages/chart.html
+++ b/public/js/app/pages/chart.html
@@ -1,5 +1,6 @@
 
 <h1>{{name}}</h1>
+<h2>Period: {{period}}</h2>
 <a href="#/players"><button class="btn btn-lg btn-primary">Select Player</button></a>
 <div id="container" style="width:100%; height:400px;">
     <highchart id="chart1" config="chartConfig"></highchart>
@@ -15,4 +16,5 @@
 <a ng-hide="currentView.fatigueHidden" href="#/view/7"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
 </div>
 
-<button ng-click="toggleInj()" class="btn btn-lg btn-primary">Toggle Injury</button>
+<button ng-click="toggleInj()" class="btn btn-lg btn-primary" style="visibility: {{perDisplay}}">Toggle Injury</button>
+<button ng-click = "togglePeriod()" class="btn btn-lg btn-primary" >Toggle Period</button>
