Package.json fixed for bcrypt. Code refactored.

--- a/public/js/app/pages/chart.html
+++ b/public/js/app/pages/chart.html
@@ -14,7 +14,9 @@
 <a ng-hide="currentView.spHidden" href="#/view/5"><button class="btn btn-lg btn-primary">Speed Intensity</button></a>
 <a ng-hide="currentView.dslHidden" href="#/view/6"><button class="btn btn-lg btn-primary">Dynamic Stress Load</button></a>
 <a ng-hide="currentView.fatigueHidden" href="#/view/7"><button class="btn btn-lg btn-primary">Fatigue Index</button></a>
-</div>
 
-<button ng-click="toggleInj()" class="btn btn-lg btn-primary" style="visibility: {{perDisplay}}">Toggle Injury</button>
-<button ng-click = "togglePeriod()" class="btn btn-lg btn-primary" >Toggle Period</button>
+</br>
+<button ng-click="toggleInj()" class="btn btn-lg btn-success" style="visibility: {{perDisplay}}">Toggle Injury</button>
+<button ng-click = "togglePeriod()" class="btn btn-lg btn-success" >Toggle Period</button>
+
+</div>
